--- a/addbooks.html
+++ b/addbooks.html
@@ -4,7 +4,6 @@
     and fixed Top menu Item
 -->
 
-
 <!-- CSS Frameworks used: Bootstrap, Font-Awesome -->
 <!-- Javascript Frameworks used: Jquery, bootstrap.min.js  -->
 <html lang="en">
@@ -62,11 +61,11 @@
             
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
-                    <li class="active"> 
+                    <li> 
                         <a href="#"><i class="fa fa-fw fa-book"></i>Library</a>
                     </li>
-                    <li>
-                        <a href="addbooks.html"><i class="fa fa-fw fa-plus"></i>Add Books</a>
+                    <li class="active">
+                        <a href="#"><i class="fa fa-fw fa-plus"></i>Add Books</a>
                     </li>
                     <li>
                         <a href="#"><i class="fa fa-fw fa-table"></i>Manage Books</a>
